# graph-visualizer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  project-specification.md  requirements.txt
api/: pyproject.toml
api/graph_visualizer/api/model/: __init__.py  workspace.py
api/src/api/components/: __init__.py  data_source_plugin.py  plugin.py  visualizer_plugin.py
api/src/api/model/: __init__.py  edge.py  filter.py  filter_operator.py  graph.py  node.py  search.py  workspace.py
block_visualizer/: pyproject.toml
block_visualizer/src/block_visualizer/: block_visualizer.py  util.py
block_visualizer/src/block_visualizer/templates/: block_view.html  block_visualizer_template.html
core/: pyproject.toml
core/src/core/cli_manager/: cli_manager.py  status.py
core/src/core/services/: mock_graph_generator.py
core/src/core/use_cases/: __init__.py  const.py  plugin_recognition.py  workspace_management.py
core/src/repositories/: __init__.py  interfaces.py  mock_graph_repository.py
core/src/services/: __init__.py
core/src/use_cases/: plugin_recognition.py
datasorce_json/src/datasource_json/: datasource.py
datasorce_json/src/datasource_json/data/: test.json  test2.json
datasource_json/: pyproject.toml
datasource_json/src/datasource_json/: __init__.py  datasource.py
datasource_json/src/datasource_json/data/: test.json  test2.json
datasource_pypi/: pyproject.toml
datasource_pypi/src/pypi_datasource/: __init__.py  datasource.py  models.py
datasource_rdf/: pyproject.toml
datasource_rdf/src/datasource_rdf/: __init__.py  datasource.py
datasource_rdf/src/datasource_rdf/data/: 200_nodes.ttl  50_nodes.ttl  data.ttl
graph_visualizer/: manage.py  requirements.txt
graph_visualizer/graph_visualizer/: apps.py  asgi.py  settings.py  urls.py  util.py  views.py  wsgi.py
graph_visualizer/graph_visualizer/static/: cli.js  graph-interactions.js  graph_interactions.js  main_view.js  style.css  tree_view.css  tree_view.js  visualizer-switching.js  visualizer_switcher.js
graph_visualizer/graph_visualizer/templates/: base.html  bird_view.html  index.html  search_filter.html  workspace_management.html
graph_visualizer/graph_visualizer/templates/views/: bird_view.html
graph_visualizer/sites/: asgi.py  settings.py  urls.py  wsgi.py
plugins/pypi_datasource/src/pypi_datasource/: datasource.py
simple_visualizer/: pyproject.toml
simple_visualizer/src/simple_visualizer/: __init__.py  simple_visualizer.py  util.py
simple_visualizer/src/simple_visualizer/templates/: simple_visualizer_template.html
