[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-core"
version = "0.1.0"
description = "Graph core component that contains business logic and rules."
requires-python = ">=3.7"

dependencies = [
    "graph-api==0.1.0",
    "jinja2==3.1.6"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"core" = ["templates/*"]
