[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-datasource-json"
version = "0.1.0"
description = "A plugin to load graph data from JSON files."
dependencies = [
    "graph-api==0.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."core.datasource"]
json_graph = "datasource_json.datasource:JsonDataSource"
