[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypi-datasource"
version = "0.1.0"
description = "A plugin to provide PyPI package dependency data as a graph datasource."

dependencies = [
    "requests == 2.32.5",
    "python-dateutil == 2.9.0",
    "packaging == 25.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."core.datasource"]
pypi = "pypi_datasource:PyPIDatasource"

