[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-simple-visualizer"
version = "0.1"
description = "A simple visualization plugin for displaying graph."
dependencies = [
    "graph-api==0.1",
    "rdflib>=6.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."core.visualizer"]
simple_visualizer = "simple_visualizer.simple_visualizer:SimpleVisualizer"
